samples/_failures_safe/1761435788_15360f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a2834e8.c: In function ‘main’:
./samples/SAFE/__tmp_1a2834e8.c:157:5: error: expected declaration or statement at end of input
  157 |     Buffer decompressed = {NULL, 0};
      |     ^~~~~~
